<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context=".View.ModuleListActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/iv_option_back"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_gravity="left|fill_vertical"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            app:srcCompat="@drawable/back_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="12"
            android:gravity="center"
            android:text="@string/option_title"
            android:textColor="@color/colorBlackFT"
            android:textSize="22dp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_option_sound"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/option_title_sound"
                android:textColor="@color/colorOption"
                android:textSize="19dp" />

            <ImageView
                android:id="@+id/iv_option_sound"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bar1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorOption"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_option_language"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/option_title_language"
                android:textColor="@color/colorOption"
                android:textSize="19dp" />

            <ImageView
                android:id="@+id/iv_option_language"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bar2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorOption"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_option_theme"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/option_title_theme"
                android:textColor="@color/colorOption"
                android:textSize="19dp" />

            <ImageView
                android:id="@+id/iv_option_theme"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bar3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorOption"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_option_bg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/option_title_background"
                android:textColor="@color/colorOption"
                android:textSize="19dp" />

            <Switch
                android:id="@+id/sw_option_bg"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bar4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorOption"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

</LinearLayout>