<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteBG"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteBG"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_main_nav"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/nav" />

        <TextView
            android:id="@+id/tv_main_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="85dp"
            android:layout_weight="5"
            android:lineSpacingExtra="4dp"
            android:text="@string/main_guide_default"
            android:textColor="@color/colorMainFT"
            android:textSize="23dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_main_sissor"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="100dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/mic_sissor" />

            <ImageView
                android:id="@+id/iv_main_fail"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:srcCompat="@drawable/mic_sissor" />

            <ImageView
                android:id="@+id/iv_main_check"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="100dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/mic_check" />

            <ImageView
                android:id="@+id/iv_main_done"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:srcCompat="@drawable/mic_check" />

            <ProgressBar
                android:id="@+id/pb_main"
                style="?android:attr/progressBarStyle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorProgressbar"
                android:indeterminateTintMode="src_atop"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/iv_main_mic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/mic" />

            <ImageView
                android:id="@+id/iv_main_micing"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                app:srcCompat="@drawable/micing" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_main_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="125dp"
        android:layout_weight="0.5"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_main_tip"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="115dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_main_tip"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_marginBottom="6dp"
            app:srcCompat="@drawable/tip_icon" />

        <TextView
            android:id="@+id/tv_main_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/main_fail_guide" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/menu_bg"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/tv_menu_title"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/main_menu_nickname"
                android:textColor="@color/colorWhiteBG"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_menu_home"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/menu_home" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/main_menu_home"
                        android:textColor="@color/colorWhiteBG"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bar1"
                    android:layout_width="1dp"
                    android:layout_height="150dp"
                    android:background="@color/colorMainFT"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_menu_notify"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/menu_notify" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/main_menu_notify"
                        android:textColor="@color/colorWhiteBG"
                        android:textSize="15dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar2"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="@color/colorMainFT"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll_menu_option"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/menu_option" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/main_menu_option"
                        android:textColor="@color/colorWhiteBG"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bar3"
                    android:layout_width="1dp"
                    android:layout_height="150dp"
                    android:background="@color/colorMainFT"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_menu_list"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:srcCompat="@drawable/menu_list" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/main_menu_list"
                        android:textColor="@color/colorWhiteBG"
                        android:textSize="15dp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>